--- a/.github/workflows/terraform_test.yml
+++ b/.github/workflows/terraform_test.yml
@@ -18,7 +18,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Needed for automated tagging
+          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.ref || github.ref }}
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
@@ -35,8 +36,14 @@ jobs:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: us-east-1
 
-      - name: Terraform Format Check
-        run: terraform fmt -check
+      - name: Auto Format
+        run: terraform fmt -recursive
+
+      - name: Commit changes
+        if: github.event_name == 'pull_request' || github.ref == 'refs/heads/main'
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "style: terraform fmt (automated)"
 
       - name: Terraform Init
         run: terraform init
